--- a/StrowAPI/build.gradle
+++ b/StrowAPI/build.gradle
@@ -5,10 +5,8 @@ plugins {
 group 'fr.strow.api'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation project(":PersistenceAPI")
+    implementation project(":EvolvedCommands")
 }
