--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,66 @@
-plugins {
+plugins{
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '5.1.0'
+    id 'maven-publish'
 }
 
 group 'fr.strow'
 version '1.0-SNAPSHOT'
 
-repositories {
-    mavenCentral()
-}
+configure(subprojects.findAll {it.name != 'EvolvedCommands'}) {
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    apply plugin: 'java'
+    apply plugin: 'com.github.johnrengelman.shadow'
+    apply plugin: 'maven-publish'
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                artifactId = project.name
+                from components.java
+            }
+        }
+    }
+
+    java {
+        withJavadocJar()
+        withSourcesJar()
+    }
+
+    repositories {
+        mavenCentral()
+        mavenLocal()
+
+        maven {
+            name 'BungeeCord'
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
+        maven {
+            name 'Spigot-API'
+            url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
+        }
+        maven {
+            name = 'Guice'
+            url = 'https://mvnrepository.com/artifact/com.google.inject/guice'
+        }
+    }
+
+    dependencies {
+        implementation group: 'org.spigotmc', name: 'spigot-api', version: '1.8.8-R0.1-SNAPSHOT'
+        implementation group: 'com.google.inject', name: 'guice', version: '4.0'
+
+        testImplementation group: 'junit', name: 'junit', version: '4.12'
+    }
+
+    def pluginName = project.name + '.jar'
+
+    shadowJar {
+        archiveFileName = pluginName
+        destinationDirectory = file('build/')
+    }
+
+    task copyToServer (type: Copy) {
+        from 'build/' + pluginName
+        into serverPath
+    }
 }
