--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,7 @@
 hs_err_pid*
 
 # Directories
-/build/
-/.idea/
-/.gradle/
-
-# EvolvedCommands
+build/
+.idea/
+.gradle/
 /EvolvedCommands/
-
-# Class files
-*.class
